--- a/.github/workflows/gtrepo.yml
+++ b/.github/workflows/gtrepo.yml
@@ -14,6 +14,10 @@ jobs:
   cli:
     name: makeBagit
     runs-on: ubuntu-latest
+    strategy:
+      matrix:
+        python-version: ["3.7", "3.8", "3.9", "3.10", "3.11"]
+
     permissions:
      checks: write
      contents: write
@@ -33,8 +37,18 @@ jobs:
         git clone https://github.com/tboenig/gt-repo-scripts.git
         mv gt-repo-scripts/scripts scripts/
         rm -r gt-repo-scripts
-        pwd
-        ls
+       
+    
+    # Installation python
+    
+    - name: Set up Python ${{ matrix.python-version }}
+      uses: actions/setup-python@v4
+      with:
+          python-version: ${{ matrix.python-version }}
+    
+    - name: Install dependencies
+      run: |
+          python -m pip install --upgrade pip
 
      # Installation GT-Labelling Documentation
 
