--- a/.github/workflows/gtrepo.yml
+++ b/.github/workflows/gtrepo.yml
@@ -41,14 +41,14 @@ jobs:
     
     # Installation python
     
-    - name: Set up Python ${{ matrix.python-version }}
-      uses: actions/setup-python@v4
-      with:
-          python-version: ${{ matrix.python-version }}
+    #- name: Set up Python ${{ matrix.python-version }}
+    #  uses: actions/setup-python@v4
+    #  with:
+    #      python-version: ${{ matrix.python-version }}
     
-    - name: Install dependencies
-      run: |
-          python -m pip install --upgrade pip
+    #- name: Install dependencies
+    #  run: |
+    #      python -m pip install --upgrade pip
 
      # Installation GT-Labelling Documentation
 
