--- a/.github/workflows/gtrepo.yml
+++ b/.github/workflows/gtrepo.yml
@@ -47,16 +47,7 @@ jobs:
         cd page-xml-draw/
         pip3 install .
     
-    #- name: Set up Python ${{ matrix.python-version }}
-    #  uses: actions/setup-python@v4
-    #  with:
-    #      python-version: ${{ matrix.python-version }}
-    
-    #- name: Install dependencies
-    #  run: |
-    #      python -m pip install --upgrade pip
-
-     # Installation GT-Labelling Documentation
+    # Installation GT-Labelling Documentation
 
     - name: install labeling
       run: |
@@ -135,6 +126,13 @@ jobs:
         output=METS repoBase=$GITHUB_REF_Name repoName=$GITHUB_REPOSITORY \
         -s:scripts/gt-overview_metadata.xsl -o:scripts/mets.sh
       shell: bash
+
+    #- name: generate drawimages.sh
+    #  run: |
+    #    java -jar saxon-he-10.5.jar -xsl:scripts/gt-overview_metadata.xsl \
+    #    output=DrawImages repoBase=$GITHUB_REF_Name repoName=$GITHUB_REPOSITORY \
+    #    -s:scripts/gt-overview_metadata.xsl -o:scripts/drawimages.sh
+    #  shell: bash
       
     - name: generate Metadata JSON file
       run: |
@@ -182,6 +180,13 @@ jobs:
 
     #- name: make bagit
     #  run: sh scripts/data_structure.sh
+    #  shell: bash
+
+
+    # drawImages
+
+    #- name: make drawimagesbagit
+    #  run: sh scripts/drawimages.sh
     #  shell: bash
      
     
