--- a/.github/workflows/gtrepo.yml
+++ b/.github/workflows/gtrepo.yml
@@ -128,11 +128,11 @@ jobs:
       shell: bash
 
     #- name: generate drawimages.sh
-    #  run: |
-    #    java -jar saxon-he-10.5.jar -xsl:scripts/gt-overview_metadata.xsl \
-    #    output=DrawImages repoBase=$GITHUB_REF_Name repoName=$GITHUB_REPOSITORY \
-    #    -s:scripts/gt-overview_metadata.xsl -o:scripts/drawimages.sh
-    #  shell: bash
+      run: |
+        java -jar saxon-he-10.5.jar -xsl:scripts/gt-overview_metadata.xsl \
+        output=DrawImages repoBase=$GITHUB_REF_Name repoName=$GITHUB_REPOSITORY \
+        -s:scripts/gt-overview_metadata.xsl -o:scripts/drawimages.sh
+      shell: bash
       
     - name: generate Metadata JSON file
       run: |
@@ -185,9 +185,9 @@ jobs:
 
     # drawImages
 
-    #- name: make drawimagesbagit
-    #  run: sh scripts/drawimages.sh
-    #  shell: bash
+    - name: make drawimagesbagit
+      run: sh scripts/drawimages.sh
+      shell: bash
      
     
 
