--- a/.github/workflows/gtrepo.yml
+++ b/.github/workflows/gtrepo.yml
@@ -127,7 +127,7 @@ jobs:
         -s:scripts/gt-overview_metadata.xsl -o:scripts/mets.sh
       shell: bash
 
-    #- name: generate drawimages.sh
+    - name: generate drawimages.sh
       run: |
         java -jar saxon-he-10.5.jar -xsl:scripts/gt-overview_metadata.xsl \
         output=DrawImages repoBase=$GITHUB_REF_Name repoName=$GITHUB_REPOSITORY \
