--- a/.github/workflows/gtrepo.yml
+++ b/.github/workflows/gtrepo.yml
@@ -37,6 +37,9 @@ jobs:
         git clone https://github.com/tboenig/gt-repo-scripts.git
         mv gt-repo-scripts/scripts scripts/
         rm -r gt-repo-scripts
+        cd scripts
+        ls
+        pwd
        
     
     # Installation drawImage
