--- a/.github/workflows/gtrepo.yml
+++ b/.github/workflows/gtrepo.yml
@@ -134,7 +134,7 @@ jobs:
       run: |
         java -jar saxon-he-10.5.jar -xsl:scripts/gt-overview_metadata.xsl \
         output=DrawImages repoBase=$GITHUB_REF_Name repoName=$GITHUB_REPOSITORY \
-        -s:scripts/gt-overview_metadata.xsl -o:scripts/drawimages.sh
+        -s:scripts/gt-overview_metadata.xsl -o:ghout/drawimages.sh
       shell: bash
       
     - name: generate Metadata JSON file
@@ -188,7 +188,7 @@ jobs:
 
     # drawImages
 
-    - name: make drawimagesbagit
+    - name: make drawimages
       run: sh scripts/drawimages.sh
       
      
