--- a/.github/workflows/gtrepo.yml
+++ b/.github/workflows/gtrepo.yml
@@ -136,6 +136,15 @@ jobs:
         output=DrawImages repoBase=$GITHUB_REF_Name repoName=$GITHUB_REPOSITORY \
         -s:scripts/gt-overview_metadata.xsl -o:scripts/drawimages.sh
       shell: bash
+
+    - name: generate drawimages.sh2
+      run: |
+        java -jar saxon-he-10.5.jar -xsl:scripts/gt-overview_metadata.xsl \
+        output=DrawImages repoBase=$GITHUB_REF_Name repoName=$GITHUB_REPOSITORY \
+        -s:scripts/gt-overview_metadata.xsl -o:ghout/drawimages.sh
+      shell: bash
+
+
       
     - name: generate Metadata JSON file
       run: |
