--- a/.github/workflows/gtrepo.yml
+++ b/.github/workflows/gtrepo.yml
@@ -103,42 +103,42 @@ jobs:
         java -jar saxon-he-10.5.jar -xsl:scripts/gt-overview_metadata.xsl \
         output=METADATA repoBase=$GITHUB_REF_NAME repoName=$GITHUB_REPOSITORY bagitDumpNum=$GITHUB_RUN_NUMBER releaseTag=$GITHUB_REF_NAME \
         -s:scripts/gt-overview_metadata.xsl -o:ghout/metadata.md
-      shell: bash
+      shell: bash {0}
 
     - name: make Compressed table view
       run: |
         java -jar saxon-he-10.5.jar -xsl:scripts/gt-overview_metadata.xsl \
         output=TABLE repoBase=$GITHUB_REF_NAME repoName=$GITHUB_REPOSITORY \
         -s:scripts/gt-overview_metadata.xsl -o:ghout/table.md
-      shell: bash
+      shell: bash {0}
 
     - name: detailed table view 
       run: |
         java -jar saxon-he-10.5.jar -xsl:scripts/gt-overview_metadata.xsl \
         output=OVERVIEW repoBase=$GITHUB_REF_Name repoName=$GITHUB_REPOSITORY \
         -s:scripts/gt-overview_metadata.xsl -o:ghout/overview.md
-      shell: bash
+      shell: bash {0}
 
     - name: generate mets.sh
       run: |
         java -jar saxon-he-10.5.jar -xsl:scripts/gt-overview_metadata.xsl \
         output=METS repoBase=$GITHUB_REF_Name repoName=$GITHUB_REPOSITORY \
         -s:scripts/gt-overview_metadata.xsl -o:scripts/mets.sh
-      shell: bash
+      shell: bash {0}
 
     - name: generate drawimages.sh
       run: |
         java -jar saxon-he-10.5.jar -xsl:scripts/gt-overview_metadata.xsl \
         output=DrawImages repoBase=$GITHUB_REF_Name repoName=$GITHUB_REPOSITORY \
         -s:scripts/gt-overview_metadata.xsl -o:scripts/drawimages.sh
-      shell: bash
+      shell: bash {0}
 
     - name: generate drawimages.sh2
       run: |
         java -jar saxon-he-10.5.jar -xsl:scripts/gt-overview_metadata.xsl \
         output=DrawImages repoBase=$GITHUB_REF_Name repoName=$GITHUB_REPOSITORY \
         -s:scripts/gt-overview_metadata.xsl -o:ghout/drawimages.sh
-      shell: bash
+      shell: bash {0}
 
 
       
@@ -147,7 +147,7 @@ jobs:
         java -jar saxon-he-10.5.jar -xsl:scripts/gt-overview_metadata.xsl \
         output=METAJSON repoBase=$GITHUB_REF_Name repoName=$GITHUB_REPOSITORY bagitDumpNum=$GITHUB_RUN_NUMBER releaseTag=$GITHUB_REF_NAME \
         -s:scripts/gt-overview_metadata.xsl -o:ocrdzip_out/metadata_l.json
-      shell: bash
+      shell: bash {0}
       
       
     - name: format json file and copy to gh branch
@@ -162,21 +162,21 @@ jobs:
         java -jar saxon-he-10.5.jar -xsl:scripts/gt-overview_metadata.xsl \
         output=README repoBase=$GITHUB_REF_Name repoName=$GITHUB_REPOSITORY \
         -s:scripts/gt-overview_metadata.xsl -o:README.md
-      shell: bash
+      shell: bash {0}
       
     - name: generate METS Volume File
       run: |
         java -jar saxon-he-10.5.jar -xsl:scripts/gt-overview_metadata.xsl \
         output=METSvolume repoBase=$GITHUB_REF_Name repoName=$GITHUB_REPOSITORY bagitDumpNum=$GITHUB_RUN_NUMBER releaseTag=$GITHUB_REF_NAME \
         -s:scripts/gt-overview_metadata.xsl -o:ocrdzip_out/mets.xml
-      shell: bash
+      shell: bash {0}
       
     - name: delete fileGrp DEFAULT
       run: |
         java -jar saxon-he-10.5.jar -xsl:scripts/gt-overview_metadata.xsl \
         output=METSdefault repoBase=$GITHUB_REF_Name repoName=$GITHUB_REPOSITORY bagitDumpNum=$GITHUB_RUN_NUMBER releaseTag=$GITHUB_REF_NAME \
         -s:scripts/gt-overview_metadata.xsl
-      shell: bash   
+      shell: bash {0}
   
     - name: Index-link
       run: |
@@ -188,14 +188,14 @@ jobs:
 
     #- name: make bagit
     #  run: sh scripts/data_structure.sh
-    #  shell: bash
+    #  shell: bash {0}
 
 
     # drawImages
 
     - name: make drawimages
       run: sh scripts/drawimages.sh
-      shell: bash
+      shell: bash {0}
      
     
 
