--- a/.github/workflows/gtrepo.yml
+++ b/.github/workflows/gtrepo.yml
@@ -199,7 +199,7 @@ jobs:
         page-xml-draw  -h
         pwd
         ls
-        page-xml-draw -i input.xml -o output.png --base-dir ../assets/images --profile contrast/profile.json
+        page-xml-draw -i input.xml -o ../../ghout/drawImg/output.png --base-dir ../assets/images --profile contrast/profile.json
       shell: bash
      
     # page-xml-draw -i /home/runner/work/German-Brazilian-Newspapers-Dataset/German-Brazilian-Newspapers-Dataset/data/DerGemeindebote/GT-PAGE/DerGemeindebote-p18.xml -o ghout/drawImg/home/runner/work/German-Brazilian-Newspapers-Dataset/German-Brazilian-Newspapers-Dataset/data/DerGemeindebote/GT-PAGE/DerGemeindebote-p18.png -b GT-PAGE/DerGemeindebote-p18.png -p /home/runner/work/German-Brazilian-Newspapers-Dataset/German-Brazilian-Newspapers-Dataset/scripts/profile.json
