--- a/.github/workflows/gtrepo.yml
+++ b/.github/workflows/gtrepo.yml
@@ -195,11 +195,13 @@ jobs:
 
     - name: make drawimages
       run: |
-        page-xml-draw -i /home/runner/work/German-Brazilian-Newspapers-Dataset/German-Brazilian-Newspapers-Dataset/data/DerGemeindebote/GT-PAGE/DerGemeindebote-p18.xml -o /home/runner/work/German-Brazilian-Newspapers-Dataset/German-Brazilian-Newspapers-Dataset/ghout/drawImg/DerGemeindebote-p18.png --base-dir /home/runner/work/German-Brazilian-Newspapers-Dataset/German-Brazilian-Newspapers-Dataset/data/DerGemeindebote/GT-PAGE --profile /home/runner/work/German-Brazilian-Newspapers-Dataset/German-Brazilian-Newspapers-Dataset/scripts/structure_profile.json
+        sh scripts/drawimages.sh
       shell: bash
      
 # page-xml-draw -i /home/runner/work/German-Brazilian-Newspapers-Dataset/German-Brazilian-Newspapers-Dataset/data/DerGemeindebote/GT-PAGE/DerGemeindebote-p18.xml -o /home/runner/work/German-Brazilian-Newspapers-Dataset/German-Brazilian-Newspapers-Dataset/ghout/drawImg/DerGemeindebote-p18.png -b /home/runner/work/German-Brazilian-Newspapers-Dataset/German-Brazilian-Newspapers-Dataset/data/DerGemeindebote/GT-PAGE/ -p /home/runner/work/German-Brazilian-Newspapers-Dataset/German-Brazilian-Newspapers-Dataset/scripts/profile.json
 #     sh scripts/drawimages.sh
+# page-xml-draw -i /home/runner/work/German-Brazilian-Newspapers-Dataset/German-Brazilian-Newspapers-Dataset/data/DerGemeindebote/GT-PAGE/DerGemeindebote-p18.xml -o /home/runner/work/German-Brazilian-Newspapers-Dataset/German-Brazilian-Newspapers-Dataset/ghout/drawImg/DerGemeindebote-p18.png --base-dir /home/runner/work/German-Brazilian-Newspapers-Dataset/German-Brazilian-Newspapers-Dataset/data/DerGemeindebote/GT-PAGE --profile /home/runner/work/German-Brazilian-Newspapers-Dataset/German-Brazilian-Newspapers-Dataset/scripts/structure_profile.json
+    
 #     page-xml-draw -i input.xml -o ../../ghout/drawImg/output.png --base-dir ../assets/images --profile contrast/profile.json
 
     - name: copy css styles and yml files to ghout
