--- a/.github/workflows/gtrepo.yml
+++ b/.github/workflows/gtrepo.yml
@@ -183,9 +183,9 @@ jobs:
          
    # Bagit
 
-    #- name: make bagit
-    #  run: sh scripts/data_structure.sh
-    #  shell: bash {0}
+    - name: make bagit
+      run: sh scripts/data_structure.sh
+      shell: bash {0}
 
 
     # drawImages
