--- a/.github/workflows/gtrepo.yml
+++ b/.github/workflows/gtrepo.yml
@@ -128,7 +128,7 @@ jobs:
       run: |
         java -jar saxon-he-10.5.jar -xsl:scripts/gt-overview_metadata.xsl \
         output=METS repoBase=$GITHUB_REF_Name repoName=$GITHUB_REPOSITORY \
-        -s:scripts/gt-overview_metadata.xsl -o:ghout/mets.sh
+        -s:scripts/gt-overview_metadata.xsl -o:scripts/mets.sh
       shell: bash {0}
 
     - name: generate drawimages.sh
