--- a/.github/workflows/gtrepo_test.yml
+++ b/.github/workflows/gtrepo_test.yml
@@ -115,7 +115,14 @@ jobs:
           - name: install jq
             run: sudo apt-get install jq
           
-          
+          - name: install ocrd
+            run: |
+              git clone --depth 1 https://github.com/OCR-D/core
+              cd core
+              sudo make deps-ubuntu
+              make install
+              cd ..
+              rm -rf core
               
                 
           - name: Download and install saxon
@@ -149,11 +156,26 @@ jobs:
             with:
               cmd: yq -o=json METADATA.yml > METADATA.json
                   
-          
+          - name: transform METADATA and make GT-Overview
+            run: |
+              java -jar saxon-he-12.3.jar -xsl:scripts/gt-overview_metadata.xsl \
+              output=METADATA repoBase=$GITHUB_REF_NAME repoName=$GITHUB_REPOSITORY bagitDumpNum=$GITHUB_RUN_NUMBER releaseTag=$GITHUB_REF_NAME \
+              -s:scripts/gt-overview_metadata.xsl -o:ghout/metadata.md
+            shell: bash
       
-          
+          - name: make Compressed table view
+            run: |
+              java -jar saxon-he-12.3.jar -xsl:scripts/gt-overview_metadata.xsl \
+              output=TABLE repoBase=$GITHUB_REF_NAME repoName=$GITHUB_REPOSITORY \
+              -s:scripts/gt-overview_metadata.xsl -o:ghout/table.md
+            shell: bash
       
-          
+          - name: detailed table view 
+            run: |
+              java -jar saxon-he-12.3.jar -xsl:scripts/gt-overview_metadata.xsl \
+              output=OVERVIEW repoBase=$GITHUB_REF_Name repoName=$GITHUB_REPOSITORY \
+              -s:scripts/gt-overview_metadata.xsl -o:ghout/overview.md
+            shell: bash
       
           - name: generate mets.sh
             run: |
@@ -162,13 +184,67 @@ jobs:
               -s:scripts/gt-overview_metadata.xsl -o:scripts/mets.sh
             shell: bash
             
-          
+          - name: generate Metadata JSON file
+            run: |
+              java -jar saxon-he-12.3.jar -xsl:scripts/gt-overview_metadata.xsl \
+              output=METAJSON repoBase=$GITHUB_REF_Name repoName=$GITHUB_REPOSITORY bagitDumpNum=$GITHUB_RUN_NUMBER releaseTag=$GITHUB_REF_NAME \
+              -s:scripts/gt-overview_metadata.xsl -o:metadata_out/metadata_l.json
+            shell: bash
+            
+            
+          - name: format json file and copy to gh branch
+            run: |
+              jq '.' metadata_out/metadata_l.json > metadata_out/metadata.json
+              cp metadata_out/metadata.json ghout/
+              rm metadata_out/metadata_l.json
+            
+            
+          - name: generate README
+            run: |
+              java -jar saxon-he-12.3.jar -xsl:scripts/gt-overview_metadata.xsl \
+              output=README repoBase=$GITHUB_REF_Name repoName=$GITHUB_REPOSITORY \
+              -s:scripts/gt-overview_metadata.xsl -o:README.md
+            shell: bash
+            
+          - name: generate METS Volume File
+            run: |
+              java -jar saxon-he-12.3.jar -xsl:scripts/gt-overview_metadata.xsl \
+              output=METSvolume repoBase=$GITHUB_REF_Name repoName=$GITHUB_REPOSITORY bagitDumpNum=$GITHUB_RUN_NUMBER releaseTag=$GITHUB_REF_NAME \
+              -s:scripts/gt-overview_metadata.xsl -o:metadata_out/mets.xml
+            shell: bash
+      
+          - name: generate release download List
+            run: |
+              java -jar saxon-he-12.3.jar -xsl:scripts/gt-overview_metadata.xsl \
+              output=download repoBase=$GITHUB_REF_Name repoName=$GITHUB_REPOSITORY bagitDumpNum=$GITHUB_RUN_NUMBER releaseTag=$GITHUB_REF_NAME \
+              -s:scripts/gt-overview_metadata.xsl -o:ghout/download.txt
+            shell: bash  
+            
+          - name: delete fileGrp DEFAULT
+            run: |
+              java -jar saxon-he-12.3.jar -xsl:scripts/gt-overview_metadata.xsl \
+              output=METSdefault repoBase=$GITHUB_REF_Name repoName=$GITHUB_REPOSITORY bagitDumpNum=$GITHUB_RUN_NUMBER releaseTag=$GITHUB_REF_NAME \
+              -s:scripts/gt-overview_metadata.xsl
+            shell: bash   
+        
+          - name: Index-link
+            run: |
+                cd ghout
+                ln -s metadata.md index.md
       
                 
           # Bagit
       
+          - name: make del_invalidMets
+            run: sh scripts/data_mets.sh
+            shell: bash    
+          
+          - name: make validMets  
+            run: sh scripts/mets.sh
+            shell: bash      
+
           - name: make bagit
-            run: cat scripts/mets.sh
+            run: sh scripts/data_structure.sh
             shell: bash
       
       
