--- a/METADATA.yml
+++ b/METADATA.yml
@@ -1,7 +1,7 @@
 schema: >-
   https://github.com/tboenig/gt-metadata/tree/master/schema/2022-03-15/schema.json
 title: GBN Dataset
-url: https://github.com/tboenig/GBN-Dataset
+url: https://github.com/tboenig/German-Brazilian-Newspapers-Dataset_1
 authors:
   - name: Alessandra
     surname: Belézia Araujo
@@ -21,7 +21,10 @@ authors:
 description: >-
   The GBN Dataset consists from four different German-Brazilian historical
   newspapers, along with their digital and binarized images and ground truth
-  files. It is a dataset created for evaluation of layout analysis methods.
+  files. The GBN-Dataset Corpus consists of two parts. 
+  The parts are designated numerically. 
+  German-Brazilian-Newspapers-Dataset_1 = Part 1; German-Brazilian-Newspapers-Dataset_2 = Part 2
+  It is a dataset created for evaluation of layout analysis methods.
 project-name: 'German-Brazilian Newspapers (GBN) '
 project-website: https://web.inf.ufpr.br/vri/databases/gbn/
 language:
