--- a/.github/workflows/gtrepo_test.yml
+++ b/.github/workflows/gtrepo_test.yml
@@ -252,12 +252,9 @@ jobs:
           - name: del invalidMets
             run: sh -ex scripts/data_mets.sh
             shell: bash    
-          
-          - name: make validMets  
-            run: sh -ex scripts/mets.sh
-            shell: bash      
+              
 
-          - name: install ocrd and bagit
+          - name: install ocrd, make validMets and bagit
             run: |
               sudo apt-get install -y python3 imagemagick libgeos-dev
               python3 -m venv venv         
@@ -265,6 +262,7 @@ jobs:
               pip install -U pip 'setuptools>=61'
               pip install ocrd
               ocrd --version
+              sh -ex scripts/mets.sh
               sh scripts/data_structure.sh   
               shell: bash
       
